--- a/client/rameses-enterprise-entity/nbproject/project.properties
+++ b/client/rameses-enterprise-entity/nbproject/project.properties
@@ -33,7 +33,7 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.swing-layout.classpath}:\
     ${libs.osiris3-client-libs.classpath}:\
-    ${reference.rameses-enterprise.jar}
+    ${libs.modules-enterprise-libs.classpath}
     ${file.reference.zxing.jar}:\
     ${reference.rameses-enterprise.jar}
 # Space-separated list of extra javac options
@@ -74,11 +74,9 @@ platform.active=Java_1.6
 project.osiris2-client-themes=../../../../incubation/osiris2-client-themes
 project.rameses-client-ui=../../../../incubation/rameses-client-ui
 project.rameses-client-ui-support=../../../incubation/rameses-client-ui-support
-project.rameses-enterprise=../rameses-enterprise
 reference.osiris2-client-themes.jar=${project.osiris2-client-themes}/dist/osiris2-client-themes.jar
 reference.rameses-client-ui-support.jar=${project.rameses-client-ui-support}/dist/rameses-client-ui-support.jar
 reference.rameses-client-ui.jar=${project.rameses-client-ui}/dist/rameses-client-ui.jar
-reference.rameses-enterprise.jar=${project.rameses-enterprise}/dist/rameses-enterprise.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
