--- a/client/rameses-gov-etracs-entity/nbproject/project.properties
+++ b/client/rameses-gov-etracs-entity/nbproject/project.properties
@@ -30,10 +30,10 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.osiris3-client-libs.classpath}:\
     ${libs.swing-layout.classpath}:\
-    ${reference.rameses-enterprise-entity.jar}:\
-    ${reference.rameses-enterprise.jar}
+    ${libs.osiris3-client-libs.classpath}:\
+    ${libs.modules-enterprise-libs.classpath}:\
+    ${reference.rameses-enterprise-entity.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -69,10 +69,8 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 no.dependencies=true
 platform.active=Java_1.6
-project.rameses-enterprise=../../rameses-enterprise
-project.rameses-enterprise-entity=../../rameses-enterprise-entity
+project.rameses-enterprise-entity=../rameses-enterprise-entity
 reference.rameses-enterprise-entity.jar=${project.rameses-enterprise-entity}/dist/rameses-enterprise-entity.jar
-reference.rameses-enterprise.jar=${project.rameses-enterprise}/dist/rameses-enterprise.jar
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
