--- a/client/rameses-enterprise-entity/nbproject/project.properties
+++ b/client/rameses-enterprise-entity/nbproject/project.properties
@@ -70,7 +70,7 @@ jnlp.signing.keystore=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 no.dependencies=true
-platform.active=Java_1.6
+platform.active=JDK_1.8
 project.osiris2-client-themes=../../../../incubation/osiris2-client-themes
 project.rameses-client-ui=../../../../incubation/rameses-client-ui
 project.rameses-client-ui-support=../../../incubation/rameses-client-ui-support
