--- a/client/rameses-gov-etracs-entity/nbproject/project.properties
+++ b/client/rameses-gov-etracs-entity/nbproject/project.properties
@@ -68,7 +68,7 @@ jnlp.signing.keystore=
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 no.dependencies=true
-platform.active=Java_1.6
+platform.active=JDK_1.8
 project.rameses-enterprise-entity=../rameses-enterprise-entity
 reference.rameses-enterprise-entity.jar=${project.rameses-enterprise-entity}/dist/rameses-enterprise-entity.jar
 reference.rameses-enterprise.jar=${project.rameses-enterprise}/dist/rameses-enterprise.jar
