--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ Thumbs.db
 /client/rameses-enterprise-entity/dist/
 /client/rameses-gov-etracs-entity/build/
 /client/rameses-gov-etracs-entity/dist/
+/client/rameses-enterprise-entity-tool/nbproject/private/
+/client/rameses-enterprise-entity-tool/dist/
+/client/rameses-enterprise-entity-tool/build/
